corrected OSX copy paste bug

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,3 +14,6 @@ bind + split-window -h # horizontal split
 unbind '"'
 bind _ split-window -v # vertical split
 bind C-j previous-window
+
+# get arround pbcopy bug
+set-option -g default-command "reattach-to-user-namespace -l bash"
