--- a/tmux.conf
+++ b/tmux.conf
@@ -62,7 +62,7 @@
  unbind -t vi-copy Enter
  bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
- set-window-option display-panes-time 1500
+ set-window-option -g display-panes-time 1500
 
  # Status Bar
  set-option -g status-interval 1
