--- a/config/heroku/config.json
+++ b/config/heroku/config.json
@@ -1,4 +1,1 @@
-{
-  "skip_analytics": false,
-  "color": true
-}
+{"skip_analytics":false,"color":true,"install":"ed8acc4d-3b3d-4104-93b8-d2792f13e467"}
