--- a/config/coc/extensions/package.json
+++ b/config/coc/extensions/package.json
@@ -3,6 +3,7 @@
     "coc-java": ">=1.4.11",
     "coc-json": ">=1.2.6",
     "coc-prettier": ">=1.1.14",
+    "coc-rust-analyzer": ">=0.7.14",
     "coc-tsserver": ">=1.5.1"
   }
 }
