--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
 .netrwhist
 *.spl
-config/yarn
-config/gcloud
 .DS_Store
-config/coc/extensions
-config/mild/config.toml
-config/fisher
-config/nvm
-config/wireshark
-config/gtk-2.0
-vim/init.vim
+config/**
+!config/fish/**
 config/fish/fish_variables
+vim/init.vim
